<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginpage"
    tools:context=".activities.LoginActivity"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/slateblue">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/logLayout"
            android:background="@drawable/gradient_background">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="30dp"
                android:id="@+id/login_pic"
                android:src="@drawable/login" />

            <TextView
                android:id="@id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="30sp"
                android:textColor="@color/beige"
                android:paddingStart="15dp"
                android:layout_marginStart="30sp"
                android:fontFamily="monospace"
                android:layout_marginBottom="70dp"/>

            <EditText
                android:textAllCaps="true"
                android:drawableLeft="@drawable/pf_focused"
                android:drawablePadding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_textbg"
                android:id="@+id/username"
                android:textSize="18sp"
                android:hint="@string/username"
                android:layout_margin="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/lightgray"
                android:padding="15dp"
                android:inputType="text"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_textbg"
                android:id="@+id/password"
                android:drawablePadding="5dp"
                android:textSize="13sp"
                android:hint="@string/password"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textColor="@color/white"
                android:textColorHint="@color/lightgray"
                android:padding="12dp"
                android:inputType="textPassword"
                android:drawableStart="@drawable/lock_focused"
                />
            <TextView
                android:id="@id/forgotpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@color/silver"
                android:layout_marginTop="3dp"
                android:layout_marginStart="235dp"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginBottom="30dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginbutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="23sp"
                android:textStyle="bold"
                style="@android:style/Widget.Button"
                android:layout_margin="35dp"
                android:background="@drawable/loginbutton"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/black"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/RegisterNow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_now"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textAlignment="center"/>

        </LinearLayout>


    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>